force-app/main/default/objects/Demo_Timing__c/Demo_Timing__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls render timing in seconds for each Loom demo phase.</description>
    <label>Demo Timing</label>
</CustomObject>