force-app/main/default/objects/Demo_Timing__c/fields/Loop1_Act_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Act_Seconds__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Render duration in seconds for the Loop 1 Act (classification) phase.</description>
    <label>Loop 1 Act Duration (sec)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>