force-app/main/default/objects/Demo_Timing__c/fields/Loop2_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Loop2_Seconds__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Render duration in seconds for the Loop 2 (routing) phase.</description>
    <label>Loop 2 Duration (sec)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>